corrected showcase on mobile overflowing. Added slightly padding to showcase content for hd screens

--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -59,7 +59,7 @@ nav {
   #showcase-content {
 
     padding-top: 20vh;
-    height: 100vh;
+    height:100%;
     header {
     overflow: visible;
 
